# parallell-2d-van-der-waals-gas-simulator

./: CMakeLists.txt  IGNOREME_PHYSICS.md  README.md  README_CAMPUS_CLUSTER.md  mp3.answers
BLD/: CMakeCache.txt
cmake/: cs484common.cmake
common/: CMakeLists.txt  datagen.cpp  datagen.h  gas_constants.h  simblock.cpp  simblock.h  xyz_writer.h
data/: regression_1.xyz  regression_2.xyz  regression_3.xyz
gas/: CMakeLists.txt
gas/gassim2d/: CMakeLists.txt
part1/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
part2/: CMakeLists.txt
part2/cmake/: FindAMPI.cmake
part3/: CMakeLists.txt  charmblock.ci  charmblock.cpp  charmblock.h  gassim2d_puppers.hpp  main.cpp  simmain.ci  simmain.h  simmain_modinit.C
scripts/: 0_load_all_ovito.py  batch_script.pbs  batch_script.slurm  regression_testing.bash  regression_testing.slurm
tests/: CMakeLists.txt  allbench.cpp  mpi_bounded_tests.cpp  mpi_gassim_fixture.h  mpi_periodic_tests.cpp  p3regress.bash  run_valgrind.bash  xyz_sorter.cpp
writeup/: benchmark_ampi-10923885.txt  benchmark_charm-10923885.txt  benchmark_mpi-10923885.txt
